; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/xtensa/gnu/extr_xtensa-isa.c_xtensa_operand_do_reloc.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/xtensa/gnu/extr_xtensa-isa.c_xtensa_operand_do_reloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 (i32*, i32)* }

@XTENSA_OPERAND_IS_PCRELATIVE = common dso_local global i32 0, align 4
@xtensa_isa_internal_error = common dso_local global i32 0, align 4
@xtisa_errno = common dso_local global i32 0, align 4
@xtisa_error_msg = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"operand missing do_reloc function\00", align 1
@xtensa_isa_bad_value = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [46 x i8] c"do_reloc failed for value 0x%08x at PC 0x%08x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xtensa_operand_do_reloc(i64 %0, i32 %1, i32 %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_3__*, align 8
  store i64 %0, i64* %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  %14 = load i64, i64* %7, align 8
  %15 = inttoptr i64 %14 to i32*
  store i32* %15, i32** %12, align 8
  %16 = load i32*, i32** %12, align 8
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %9, align 4
  %19 = call %struct.TYPE_3__* @get_operand(i32* %16, i32 %17, i32 %18)
  store %struct.TYPE_3__* %19, %struct.TYPE_3__** %13, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %21 = icmp ne %struct.TYPE_3__* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %56

23:                                               ; preds = %5
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = load i32, i32* @XTENSA_OPERAND_IS_PCRELATIVE, align 4
  %28 = and i32 %26, %27
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %23
  store i32 0, i32* %6, align 4
  br label %56

31:                                               ; preds = %23
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 1
  %34 = load i64 (i32*, i32)*, i64 (i32*, i32)** %33, align 8
  %35 = icmp ne i64 (i32*, i32)* %34, null
  br i1 %35, label %40, label %36

36:                                               ; preds = %31
  %37 = load i32, i32* @xtensa_isa_internal_error, align 4
  store i32 %37, i32* @xtisa_errno, align 4
  %38 = load i32, i32* @xtisa_error_msg, align 4
  %39 = call i32 @strcpy(i32 %38, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %6, align 4
  br label %56

40:                                               ; preds = %31
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 1
  %43 = load i64 (i32*, i32)*, i64 (i32*, i32)** %42, align 8
  %44 = load i32*, i32** %10, align 8
  %45 = load i32, i32* %11, align 4
  %46 = call i64 %43(i32* %44, i32 %45)
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %55

48:                                               ; preds = %40
  %49 = load i32, i32* @xtensa_isa_bad_value, align 4
  store i32 %49, i32* @xtisa_errno, align 4
  %50 = load i32, i32* @xtisa_error_msg, align 4
  %51 = load i32*, i32** %10, align 8
  %52 = load i32, i32* %51, align 4
  %53 = load i32, i32* %11, align 4
  %54 = call i32 @sprintf(i32 %50, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0), i32 %52, i32 %53)
  store i32 -1, i32* %6, align 4
  br label %56

55:                                               ; preds = %40
  store i32 0, i32* %6, align 4
  br label %56

56:                                               ; preds = %55, %48, %36, %30, %22
  %57 = load i32, i32* %6, align 4
  ret i32 %57
}

declare dso_local %struct.TYPE_3__* @get_operand(i32*, i32, i32) #1

declare dso_local i32 @strcpy(i32, i8*) #1

declare dso_local i32 @sprintf(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
